@@ -717,6 +717,7 @@ Samuel Nicolary
 Gustavo Niemeyer
 Oscar Nierstrasz
 Hrvoje Niksic
+Birk Nilson
 Gregory Nofi
 Jesse Noller
 Bill Noon
